[examples] Adds gradle tasks for each example